# casbin-redis-watcher

./: pyproject.toml
.github/workflows/: release.yml
casbin_redis_watcher/: __init__.py  options.py  watcher.py
tests/: test_redis_watcher.py
